--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Кот энержи</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:400,500" rel="stylesheet">
@@ -150,16 +149,50 @@
 
   <section class="main__example">
    <div class="container">
-    <div class="example__description">
-      <p class="description__paragraph">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. 
-      </p> 
-    </div>
+    <ul class="example__examplelist">
+      <li class="exmaple__exampleitem example__description">
+          <p class="description__paragraph">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. 
+          </p> 
+    
+          <ul class="resultlist">
+           <li class="resultlist__item">
+             <h3>5 кг</h3> 
+             <span>снижение веса</span>
+           </li>
+           <li class="resultlist__item">
+            <h3>60 дней</h3> 
+            <span>затрачено времени</span>
+           </li> 
+          </ul>
+          <p class="example__cost">
+            <span>Затраты&nbsp;на&nbsp;питание:</span>
+            <span>15&nbsp;000&nbsp;руб</span>
+          </p>
+      </li>
+
+      <li class="exmaple__exampleitem catitem">
+        <picture>
+         <source src="img/before-cat.png" > 
+          <img src="img/before-cat.png" alt="Левый кот"> 
+        </picture>
+
+        <input type="range" name="rangecat" id="range" min="0" max="100" step="50">
+
+      </li>
+
+    </ul> 
    </div> 
   </section>
-
+  <section class="main__map">
+   <div class="container">
+    
+   </div> 
+  </section>
  </main>
  <script data-prepros-origin-host="localhost" src="http://localhost:7895/__prepros-server__/prepros.js"> </script>
 </body>
 <script src="js/script.js"></script>
+ 
+
 </html>
